--- a/semquases.css
+++ b/semquases.css
@@ -2989,7 +2989,7 @@ font-weight: bold;
 }
 
 .bgfrase{
- /* background: #d1d1d1; */
+ background: #f2e1b2;
   padding: 25px 0;
   margin-top: -50px;
   position:relative;
@@ -3067,12 +3067,13 @@ opacity: 0.5;
 */
 
 #blackbar1 {
-	height: 20px;
-	margin-top: 50px;
+	height: 5px;
+/* 	margin-top: 50px; */
 }
 
 #blackbar1 img{
 	width: 55%;
+	display: none;
 }
 
 @media only screen and (max-width: 767px) {
