--- a/semquases.css
+++ b/semquases.css
@@ -496,7 +496,7 @@ span.smg-label {
 		  background-color: #FFF;
 			padding:0 3em;
 
-    font-family: Lora, Istok Web, sans-serif !important;
+    font-family: 'Lora', serif;
     color: #565859 !important;
     font-size: 16px !important;
     line-height: 1.75em !important;
