--- a/semquases.css
+++ b/semquases.css
@@ -4572,3 +4572,20 @@ cite.user > a {
     display: inline-block;
 }
 }
+
+
+article.notfirstpost {
+    position: relative;
+    display: inline;
+    background: url(endereço-da-sua-imagem) no-repeat;
+    width: 45%;
+    height: 450px;
+    float: left;
+    margin: 5px 10px 15px;
+    border: 1px solid #ddd;
+    letter-spacing: 0px;
+    font-size: 12px;
+    line-height: 1.4em;
+    text-align: justify;
+    background: #fff;
+}
