--- a/semquases.css
+++ b/semquases.css
@@ -4589,3 +4589,86 @@ article.notfirstpost {
     text-align: justify;
     background: #fff;
 }
+
+article.notfirstpost img.blogger-post-thumbnail{
+width: 100%;
+heigth: 240px;
+}
+
+
+article.notfirstpost h2.date-header{
+margin: 0px;padding: 0px;
+text-indent: -9999em;
+}
+
+article.notfirstpost .tagpaginacao{
+    text-align: center;
+    margin: 10px 0 5px;
+    letter-spacing: 2px;
+    font-size: 11px;
+    font-family: "Open Sans", sans-serif;
+}
+
+article.notfirstpost .tagpaginacao a {
+    color: #191919;
+}
+
+article.notfirstpost .meta-divider {
+    border-top: 1px solid;
+    width: 10%;
+    display: block;
+    max-width: 27px;
+    margin: 0 auto 20px;
+    color: inherit;
+}
+
+
+article.notfirstpost .comentariospag{
+text-align: center;
+
+}
+
+article.notfirstpost .areapost{
+min-height: 110px;
+}
+
+article.notfirstpost .blogger-post-body-area{
+padding: 8px;
+ margin-bottom: 20px;
+}
+article.notfirstpost .blogger-post-footer {display:none;}
+
+
+  @media only screen and (max-width: 767px) {
+   article.notfirstpost{
+width:60% !important;
+}
+}
+
+  @media only screen and (max-width: 480px) {
+    article.notfirstpost{
+width:95% !important;
+}
+}
+
+
+article.notfirstpost h3, article.notfirstpost h3 a, article.notfirstpost h3 a:visited, article.notfirstpost h3 strong {/* --estilos para o titulo das postagens--*/
+display:block;word-wrap: break-word;
+    color: #191919 !important;
+    font-size: 15px;
+    margin: 10px 0 30px;
+    padding: 0;
+    line-height: 1.4em;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 400;
+    text-align: center;
+	letter-spacing: 1.5px}
+
+article.notfirstpost #showlink{ /* --estilos para o leia mais--*/
+margin:5px;display:block;
+float:right;padding: 4px 7px;
+font-weight:normal;letter-spacing: 0px;
+background:#66bbdd; /* ---cor de fundo--*/
+border-radius:5px;-moz-border-radius:5px;
+-webkit-border-radius:5px;}
+article.notfirstpost #showlink a {color: #ffffff;/* escolha a cor de seu link */}
