--- a/semquases.css
+++ b/semquases.css
@@ -4592,7 +4592,7 @@ article.notfirstpost {
 
 article.notfirstpost img.blogger-post-thumbnail{
 width: 100%;
-heigth: 240px;
+height: 240px;
 }
 
 
