--- a/semquases.css
+++ b/semquases.css
@@ -516,6 +516,7 @@ span.smg-label {
     width: 827px;
     padding: 0 !important;
     margin-left: -50px;
+    min-height: 500px;
 }
 	
 	.post-entry p {
@@ -3772,6 +3773,10 @@ strong.tag-heading .fa {
 		margin-left: -20px;
 
 	}
+	.post-entry .YOUTUBE-iframe-video {
+	    max-width:477px;	
+	    margin-left: -20px;
+	}
 		
 	.post-image img {
 		max-width:100%;
@@ -4015,8 +4020,10 @@ display:none;
 	    max-width:320px;								
 		height:auto;
     	margin-left: -40px;
-		
-
+	}
+	.post-entry .YOUTUBE-iframe-video {
+   		max-width:320px;	
+   		margin-left: -40px;
 	}
 	
 	.post-image img {
