--- a/semquases.css
+++ b/semquases.css
@@ -2932,6 +2932,10 @@ color:#c3c3c3;
 
 }
 
+#bar3 .widget ul li:last-child{
+margin-right: -12px !important;
+}
+
 #bar3 .widget ul li:last-child:after {
     content: "";
 }
